--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,51 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.header {
+    width: 100%;
+    height: 70px;
+    padding: 0 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 100;
+    background: rgb(255, 255, 255);
+    box-shadow: 0 0 3px 1px rgba(0,0,0,.2);
+}
+
+.header__logo {
+    width: 105px;
+    height: 30px;
+}
+
+.menu__container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.notification-icon {
+    font-size: 30px;
+    color: rgb(190,201,217);
+    margin-right: 30px;
+}
+
+.avatar__item-round {
+    width: 40px;
+    height: 40px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 1.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(249,153,27);
+    border-radius: 50%;
+}
+
+
+.main-layout {
+    height: calc(100vh - 70px);
+    background: rgb(248,249,252);
+}
