--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,12 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.container {
+    max-width: 1300px;
+    display: flex;
+    margin: 0 auto;
+}
+
 .header {
     width: 100%;
     height: 70px;
@@ -46,12 +52,101 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(249,153,27);
+    background-color: rgb(249, 153, 27);
     border-radius: 50%;
 }
 
 
 .main-layout {
     height: calc(100vh - 70px);
-    background: rgb(248,249,252);
+    background: rgb(248, 249, 252);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.cards__container {
+    width: 700px;
+    height: 500px;
+    background: yellowgreen;
+    display: grid;
+    justify-items: stretch;
+}
+
+.cards__item--binary {
+    background: rgb(255, 255, 255);
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 5;
+}
+
+.cards__item--qa {
+    background: rgb(81, 192, 119);
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 5;
+    grid-row-end: 9;
+}
+
+.cards__item--js {
+    background: rgb(248, 207, 105);
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 7;
+}
+
+.cards__item--java {
+    background: rgb(225, 44, 76);
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 7;
+    grid-row-end: 9;
+}
+
+.cards__item--php {
+    background: rgb(136, 146, 191);
+    grid-column-start: 5;
+    grid-column-end: 9;
+    grid-row-start: 1;
+    grid-row-end: 4;
+}
+
+.cards__item--dotnet {
+    background: rgb(100, 33, 119);
+    grid-column-start: 5;
+    grid-column-end: 8;
+    grid-row-start: 4;
+    grid-row-end: 9;
+}
+
+.cards__item--events {
+    background: rgb(46, 153, 254);
+    grid-column-start: 8;
+    grid-column-end: 9;
+    grid-row-start: 4;
+    grid-row-end: 6;
+}
+
+.cards__item--blog {
+    background: rgb(4, 67, 163);
+    grid-column-start: 8;
+    grid-column-end: 9;
+    grid-row-start: 6;
+    grid-row-end: 8;
+}
+
+.cards__item--contacts {
+    background: rgb(0, 38, 94);
+    grid-column-start: 8;
+    grid-column-end: 9;
+    grid-row-start: 8;
+    grid-row-end: 9;
+}
+
+.footer {
+    margin-top: 50px;
 }
