--- a/animations.css
+++ b/animations.css
@@ -44,3 +44,26 @@
       transform: translate3d(0, 0, 0);
     }
 }
+
+@keyframes fadeOutTopRight {
+    from {
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+    }
+    to {
+      opacity: 0;
+      transform: translate3d(100%, -100%, 0);
+    }
+}
+
+  
+@keyframes fadeInTopRight {
+    from {
+      opacity: 0;
+      transform: translate3d(100%, -100%, 0);
+    }
+    to {
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+    }
+}
