--- a/animations.css
+++ b/animations.css
@@ -67,3 +67,25 @@
       transform: translate3d(0, 0, 0);
     }
 }
+
+@keyframes fadeOutBottomRight {
+    from {
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+    }
+    to {
+      opacity: 0;
+      transform: translate3d(100%, 100%, 0);
+    }
+}
+
+@keyframes fadeInBottomRight {
+    from {
+      opacity: 0;
+      transform: translate3d(100%, 100%, 0);
+    }
+    to {
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+    }
+}
