--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,12 @@ body {
     margin-right: 30px;
 }
 
+.notification-icon:hover {
+    font-size: 30px;
+    color: rgb(132, 137, 143);
+    margin-right: 30px;
+}
+
 .avatar__item-round {
     width: 40px;
     height: 40px;
@@ -60,8 +66,55 @@ body {
     align-items: center;
     background-color: rgb(249, 153, 27);
     border-radius: 50%;
+    position: relative;
 }
 
+.avatar__item-round:hover {
+    background-color: rgb(221, 125, 0);
+}
+
+.menu-popup {
+    width: 160px;
+    height: 100px;
+    visibility: hidden;
+    position: absolute;
+    top: 40px;
+    right: 0;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 0 3px 1px rgba(0,0,0,.2);
+    border-radius: 1px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+}
+
+.avatar__item-round:hover .menu-popup {
+    visibility: visible;
+}
+
+.menu-popup__label {
+    font-size: 12px;
+    color: rgb(122, 122, 120);
+    margin: 10px 15px 5px 15px;
+    padding-bottom: 5px;
+    border-bottom: thin solid rgb(122, 122, 120);
+}
+
+.menu-popup__item {
+    color: rgb(51, 51, 48);
+    font-size: 16px;
+    text-align: left;
+    margin: 0px 15px;
+    padding: 5px 2px;
+}
+
+.menu-popup__item:last-child {
+    margin-bottom: 5px;
+}
+
+.menu-popup__item:hover {
+    background-color: rgba(132, 137, 143, 0.2);
+}
 
 .main-layout {
     /* height: calc(100vh - 70px); */
