feat(alert): add alert messages.

--- a/styles.css
+++ b/styles.css
@@ -427,3 +427,58 @@ body {
     margin-top: 50px;
     margin-bottom: 10px;
 }
+
+.alert-message {
+    position: fixed; 
+    width: 100vw; 
+    height: 100vh; 
+    display: flex; 
+    align-items: flex-end; 
+    justify-content: flex-end;
+    top: 0;
+    z-index: 1000;
+    pointer-events: none;
+}
+
+.alert-message__container {
+    display: flex; 
+    flex-direction: column;
+}
+
+.alert-message__item {
+    width: 250px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+}
+
+.alert-message__item--error {
+    background-color: rgba(195, 83, 77, 0.75);
+}
+
+.alert-message__item--success {
+    background-color: rgba(107, 171, 105, 0.75);
+}
+
+.alert-message__item--warning {
+    background-color: rgba(250, 159, 68, 0.75);
+}
+
+.alert-message__item-icon {
+    font-size: 30px;
+    margin-right: 20px;
+    color: rgb(255, 255, 255);
+}
+
+.alert-message__item-header {
+    color: rgb(255, 255, 255);
+    font-weight: 600;
+}
+
+.alert-message__item-text {
+    color: rgb(255, 255, 255);
+}
+
