--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,8 @@ body {
     top: 0;
     background: rgb(255, 255, 255);
     box-shadow: 0 0 3px 1px rgba(0,0,0,.2);
+    animation-duration: calc(var(--animate-duration) * 1.25);
+    animation-name: fadeInDown;
 }
 
 .header__logo {
